--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
+    "postinstall": "chmod +x node_modules/.bin/vite"
   },
   "devDependencies": {
     "lil-gui": "^0.17.0",
